<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/mainFragment"
              android:background="#8800ff00"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView1" android:layout_weight="100" android:fillViewport="false">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MainControls">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <Space
                        android:layout_width="20px"
                        android:layout_height="20px"
                        android:id="@+id/space4"/>
                <EditText
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/PrimaryVoltage_input"
                        android:inputType="numberDecimal" android:text="0"
                        android:numeric="decimal"
                        android:gravity="center"/>
                <Space
                        android:layout_width="20px"
                        android:layout_height="20px"
                        android:id="@+id/space3"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Primary_coil_caption"
                        android:id="@+id/PrimaryCoil_cap" android:gravity="center"/>
                <Space android:layout_width="10px" android:layout_height="20px" android:id="@+id/space6"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:id="@+id/TypeCaption" android:password="false" android:text="@string/Type_caption"
                        android:gravity="center"/>
                <Space android:layout_width="10px" android:layout_height="fill_parent" android:id="@+id/space5"
                       android:layout_gravity="top"/>
                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/TypeList"
                        android:id="@+id/TypeSpinner"
                        android:spinnerMode="dropdown" android:focusable="false"/>

            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <Space
                        android:layout_width="20px"
                        android:layout_height="fill_parent"
                        android:id="@+id/space7"/>
                <EditText
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:id="@+id/AB_input" android:numeric="decimal" android:inputType="numberDecimal"
                        android:gravity="center|center_vertical"/>
                <Space
                        android:layout_width="20px"
                        android:layout_height="fill_parent"
                        android:id="@+id/space8"/>
                <EditText
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:id="@+id/CD_input" android:numeric="decimal"
                        android:gravity="center"/>
                <Space
                        android:layout_width="20px"
                        android:layout_height="20px"
                        android:id="@+id/space9" android:layout_gravity="center_horizontal|bottom"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-What's that?"
                        android:id="@+id/button" android:layout_gravity="center_horizontal|bottom"
                        android:onClick="Click"/>
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <Space
                        android:layout_width="20px"
                        android:layout_height="fill_parent"
                        android:id="@+id/space"/>
                <TextView
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Voltage_caption"
                        android:id="@+id/Voltage_caption"/>
                <Space
                        android:layout_width="20px"
                        android:layout_height="fill_parent"
                        android:id="@+id/space1"/>
                <TextView
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Current_caption"
                        android:id="@+id/Current_caption"/>

                <Space
                        android:layout_width="20px"
                        android:layout_height="20px"
                        android:id="@+id/space2" android:layout_gravity="center"/>
                <Button
                        android:id="@+id/Add_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_add"
                        android:onClick="Click"
                        android:clickable="true"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Calculate_caption"
            android:id="@+id/Calculate_button"
            android:layout_weight="1"
            android:onClick="Click"
            android:clickable="true"
            />
</LinearLayout>